--- a/TheWorld_V2/src/TheWorld_V2/project.json
+++ b/TheWorld_V2/src/TheWorld_V2/project.json
@@ -9,12 +9,15 @@
     "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
     "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
     "Microsoft.AspNet.Mvc.TagHelpers": "6.0.0-rc1-final",
+    "Microsoft.Extensions.Configuration": "1.0.0-rc1-final",
     "EntityFramework.Core": "7.0.0-rc1-final",
-    "EntityFramework.SqlServer": "7.0.0-beta8",
-    "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final"
+    "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
+    "EntityFramework.Commands": "7.0.0-rc1-final",
+    "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final"
   },
 
   "commands": {
+    "ef": "EntityFramework.Commands",
     "web": "Microsoft.AspNet.Server.Kestrel"
   },
 
