--- a/TheWorld_V2/src/TheWorld_V2/project.json
+++ b/TheWorld_V2/src/TheWorld_V2/project.json
@@ -15,7 +15,8 @@
     "EntityFramework.Commands": "7.0.0-rc1-final",
     "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
     "AutoMapper": "4.0.4",
-    "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-rc1-final"
+    "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-rc1-final",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final"
   },
 
   "commands": {
