--- a/TheWorld_V2/src/TheWorld_V2/bower.json
+++ b/TheWorld_V2/src/TheWorld_V2/bower.json
@@ -9,6 +9,7 @@
     "bootstrap":                      "~3.3.5",
     "font-awesome":                   "~4.6.1",
     "bootswatch":                     "3.3.5+2",
-    "angular":                        "~1.4.5"
+    "angular":                        "~1.4.5",
+    "angular-route":                  "~1.4.5"
   }
 }
