setting up prepublish/prepare scripts

--- a/TheWorld_V2/src/TheWorld_V2/project.json
+++ b/TheWorld_V2/src/TheWorld_V2/project.json
@@ -44,5 +44,10 @@
   "publishExclude": [
     "**.user",
     "**.vspscc"
-  ]
+  ],
+
+  "scripts": {
+    "prepublish": [ "npm install", "bower install" ],
+    "prepare": [ "gulp minify" ]
+  }
 }
