--- a/TheWorld_V2/src/TheWorld_V2/package.json
+++ b/TheWorld_V2/src/TheWorld_V2/package.json
@@ -3,7 +3,8 @@
 	"name":       "TheWorld",
 	"private":    true,
   "devDependencies": {
-    "gulp":         "~3.9.1",
-    "gulp-uglify":  "~1.5.3"
+    "gulp":             "~3.9.1",
+    "gulp-uglify":      "~1.5.3",
+    "gulp-ng-annotate": "~1.1.0"
   }
 }
